--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <tr>
           <td class="col-table"></td>
           <td><a href="https://drive.google.com/file/d/1flafiFKmAGlw4RpVVzvhoMKn-kKSonK8/view?usp=drive_link">Click here to
-              view this project</a></td>
+              view this project demo</a></td>
         </tr>
 
         <tr>
